dark-light mode update

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </div>
     </div>
 
-    <script src = "script.js"></script>
+    <div class="toggleClass" onclick="toggleFunction()"></div>
+
+    <script src="script.js"></script>
 
 </body>
 
